styles/lightDesign_v1.5.css
/* ... */
.formButtons {
  background: var(--color-background-light);
  border: none;
  border-radius: 20px;
  color: var(--color-background-dark);
  padding: 0.75rem;
  margin: 0.5rem 0;
  resize: none;
  width: 95%;
  font-size: 1em;
  transition: 0.3s ease-in;
}

::placeholder {
  padding: 5px;
  margin: auto;
  color: var(--color-primary-dark);
  font-size: 1em;
}

textarea {
  height: 150px;
}

/*END CONTACT SECTION*/

/*SOCIAL MEDIA SECTION*/
#socialMediaHeading {
  text-align: center;
  color: #f8f8ff;
}

#socialMediaItems {
  display: flex;
  list-style-type: none;
  padding: 0;
  flex-direction: row;
}

.socialMediaItem {
  display: flex;
  flex: 1;
  padding: 0.75rem;
  text-decoration: none;
  justify-content: center;
}

.socialMediaButton {
  background: #f8f8ff;
  width: 50px;
  height: 50px;
  padding: 0.25rem;
  border: none;
  border-radius: 100%;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  max-width: 75%;
  cursor: pointer;
}

.socialMediaButton:active {
  transform: translateY(2px);
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
}

/*END SOCIAL MEDIA SECTION*/

/* FOOTER */
footer {
  width: 100%;
  background-color: #000000;
  color: #f8f8ff;
  text-align: center;
  height: fit-content;
  border: none;
}
/*END FOOTER*/

/* @MEDIA */

@media screen and (width >= 768px) and (width <= 1023px) {
  #landing,
  #education {
    flex-direction: row;
    gap: 10px;
  }

  #landing2 > .smallBlock {
    width: 70%;
  }

  #navBarItems {
    padding: 1rem 0;
  }

  #techStack1,
  #techStack2 {
    align-items: center;
  }

  #software-development,
  #data-analysis,
  #pm-and-others {
    grid-template-columns: auto auto auto;
  }

  .typeStatus {
    display: flex;
    width: 100%;
    padding: 0.5rem 0;
  }

  #techStackContainer {
    grid-template-columns: auto auto auto auto;
  }
}

@media screen and (width >= 1024px) {
  /*Navigation Bar*/
  #newNavBar {
    height: 50px;
  }

  #menu {
    display: none;
    visibility: none;
    opacity: 0;
  }

  #myName {
    align-items: baseline;
    padding: 0 1rem;
  }

  .myName {
    font-size: medium;
  }

  #navBarItems {
    flex-direction: row;
    width: 80%;
    align-items: center;
    justify-content: center;
    top: 0;
    z-index: 1000;
    padding-top: 0.15rem;
    position: fixed;
  }

  .primaryButtons button:hover {
    box-shadow: 0px 5px 10px var(--color-primary-dark);
    transform: translateY(-4px);
  }

  button.secondaryButtons:hover {
    box-shadow: 0px 2.5px 5px var(--color-primary-dark);
    transform: translateY(-4px);
  }

  #menu:hover {
    transform: translateY(-4px);
  }

  #myName:hover {
    transform: translateY(-4px);
  }

  #themeButton:hover {
    transform: translateY(-4px);
  }

  .navBarItem:hover {
    box-shadow: none;
    transform: translateY(-4px);
  }

  .sourceCodeButton:hover {
    box-shadow: 0px 5px 10px var(--color-background-dark);
    transform: translateY(-4px);
  }

  .youtubeButton:hover {
    box-shadow: 0px 5px 10px var(--color-action-youtube);
    transform: translateY(-4px);
  }

  .socialMediaButton:hover {
    box-shadow: 0px 5px 10px #f8f8ff;
    transform: translateY(-4px);
  }

  #navBarItemsLarge {
    display: flex;
    justify-content: center;
  }

  #navBarItems.hide {
    opacity: 1;
    visibility: visible;
    display: flex;
    background: transparent;
    border-radius: none;
    box-shadow: none;
    flex-direction: row;
  }

  .navBarItem {
    background: transparent;
    border-radius: none;
    box-shadow: none;
  }

  /*End Navigation Bar*/

  /*Landing Section*/
  #landing {
    display: flex;
    flex-direction: row;
  }

  #landing1 {
    flex: 2;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
  }

  #landing2 {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    flex: 3;
    align-items: center;
  }

  #landing2 > .smallBlock {
    width: 85%;
  }
  /*End Landing Section*/

  /*About Me Section*/
  #aboutMe {
    display: flex;
    flex-direction: row;
  }

  #educationLarge {
    flex: 2.5;
  }

  #techStackLarge {
    flex: 3;
  }

  #education,
  #techStack1,
  #techStack2 {
    flex-direction: column;
    gap: 5px;
  }

  #software-development,
  #data-analysis,
  #pm-and-others {
    grid-template-columns: auto auto auto;
  }

  #techStackContainer {
    grid-template-columns: auto auto auto auto auto auto;
  }
  /*End About Me Section*/

  /*Projects Section*/
  .projectContainer {
    flex-direction: row;
  }

  .projectContainer:nth-child(3) {
    flex-direction: row-reverse;
  }

  .projectContainer:nth-child(5) {
    flex-direction: row-reverse;
  }

  .projectContainer1 {
    flex: 3;
  }

  .projectContainer2 {
    display: flex;
    flex-direction: column;
    flex: 2.5;
    align-items: center;
  }

  .typeStatus {
    display: flex;
    width: 100%;
    padding: 0.5rem 0;
  }
  /*End Projects Section*/

  /* Contact Section */
  #fullName {
    width: 98%;
  }
}

